Bug 19027: SquirrelFish: Incorrect codegen for pre-increment <https://bugs.webkit.org/show_bug.cgi?id=19027>

Reviewed by Geoff

This fixes the codegen issues for the pre-inc/decrement operators
to prevent incorrectly clobbering the destination in the event of
an exception.


git-svn-id: http://svn.webkit.org/repository/webkit/branches/squirrelfish@33432 268f45cc-cd09-0410-ab3c-d52691b4dbfc